--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <div class="flex items-center mt-3">
                 <img src="christ-logo.png" alt="Christ University Logo" class="h-10 w-10 mr-3 object-contain">
-                <p class="text-[#a78bfa]">Christ University, Bangalore</p>
+                <p class="glow-subtitle">Christ University, Bangalore</p>
             </div>
         </div>
 
