--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <p class="about-text">I am a final-year Computer Science student at Christ University with a strong interest in emerging technologies.</p>
         <p class="about-text">I am genuinely passionate about video games especially their history, design and development.</p>
-        <p class="about-text">I am also comfortable working across different software development areas and always ready to learn and improve.</p>
+        <p class="about-text">I am also comfortable working across different software development areas and always ready to learn and contribute.</p>
 
     </section>
 
@@ -235,7 +235,7 @@
 </div>
 
 <footer class="text-center py-6 relative z-10">
-    <p class="text-gray-200 text-sm">&copy; 2025 Arya Acharya.</p>
+    <p class="text-gray-200 text-sm">&copy; 2026 Arya Acharya.</p>
 </footer>
 
 <script>
