--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
     </section>
 
 </div>
+<div class="flex justify-center mt-12">
+    <a href="more.html" class="cyber-button">
+         DLC Content
+    </a>
+</div>
+
 
 <footer class="text-center py-6 relative z-10">
     <p class="text-gray-200 text-sm">&copy; 2026 Arya Acharya.</p>
